fixed keyboard-language section width to not truncate to '...' when overflowing slightly

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -73,6 +73,10 @@
   color: @rose;
 }
 
+#language {
+  min-width: 20px;
+}
+
 #cpu,
 #backlight,
 #battery {
